# Codex-X

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml  star-history.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/public/: theme-init.js
apps/desktop/src/: appUpdater.ts  main.tsx  promptCategories.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_db.rs  backups.rs  ccswitch.rs  config_migration.rs  constants.rs  error.rs  file_io.rs  lib.rs  main.rs  paths.rs  remote.rs  skins.rs  sqlite_utils.rs  state.rs  tests.rs  toml_utils.rs  updates.rs
apps/desktop/src-tauri/src/prompts/: catalog.rs  managed_agents.rs  mod.rs  store.rs  types.rs
apps/desktop/src-tauri/src/providers/: connection.rs  live.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/sessions/: app_server.rs  backup.rs  delete.rs  global_state.rs  mod.rs  storage.rs  sync.rs  transaction.rs  transaction_tests.rs  types.rs
apps/desktop/src-tauri/src/skills_mcp/: mcp.rs  mod.rs  skills.rs
apps/desktop/src/components/: AppDialogs.tsx  AppShell.tsx  PageTransition.tsx  PromptCategoryManager.tsx
apps/desktop/src/components/ui/: Button.tsx  Checkbox.tsx  IconButton.tsx  (+4 more)
apps/desktop/src/pages/: OverviewPage.tsx  PromptsPage.tsx  ProvidersPage.tsx  SessionManagementPage.tsx  SkillsMcpPage.tsx  SkinsPage.tsx  UtilityPages.tsx
apps/desktop/src/styles/: app-dialogs.css  app-shell.css  base.css  dark-theme.css  overview-page.css  providers-page.css  session-management.css  skills-prompts-pages.css  ui-primitives.css  utility-pages.css
docs/: updater-signing.md
examples/: gpt5.4-unrestricted.md  gpt5.5-jeli.md
scripts/: prepare_updater_manifests.py  release.sh  validate_updater_release.py
services/star-history-worker/: README.md
services/star-history-worker/src/: index.js
services/star-history-worker/test/: worker.test.js
