[package]
name = "codex-x"
version = "0.2.34"
description = "Codex Switch & Instruct desktop manager"
authors = ["yynxxxxx"]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "codexx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "2.0"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2.12", features = ["tls"] }
sha2 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
