[package]
name = "codex-x"
version = "0.3.0"
description = "Codex Switch & Instruct desktop manager"
authors = ["yynxxxxx"]
license = "MIT"
edition = "2021"
rust-version = "1.89.0"

[lib]
name = "codexx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "2.0"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
semver = "1.0"
ureq = { version = "2.12", features = ["tls"] }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls-no-provider",
    "socks",
    "system-proxy",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.10"
percent-encoding = "2.3"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
base64 = "0.22"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
